test_regress/t/t_stream_integer_type.out
%Error: t/t_stream_integer_type.v:128:11: SEL is not an unpacked array, but is in an unpacked array context
  128 |          {<<8{byte_out}}      = packed_data_32;
      |           ^~
%Error: t/t_stream_integer_type.v:129:11: SEL is not an unpacked array, but is in an unpacked array context
  129 |          {<<16{shortint_out}} = packed_data_64;
      |           ^~
%Error: t/t_stream_integer_type.v:130:11: SEL is not an unpacked array, but is in an unpacked array context
  130 |          {<<32{int_out}}      = packed_data_128;
      |           ^~
%Error: t/t_stream_integer_type.v:131:11: SEL is not an unpacked array, but is in an unpacked array context
  131 |          {<<32{integer_out}}  = packed_data_128_i;
      |           ^~
%Error: t/t_stream_integer_type.v:132:11: SEL is not an unpacked array, but is in an unpacked array context
  132 |          {<<64{longint_out}}  = packed_data_256;
      |           ^~
%Error: t/t_stream_integer_type.v:133:11: SEL is not an unpacked array, but is in an unpacked array context
  133 |          {<<64{time_out}}     = packed_time_256;
      |           ^~
%Error: t/t_stream_integer_type.v:134:11: SEL is not an unpacked array, but is in an unpacked array context
  134 |          {<<8{bit_out}}       = v_packed_data_32;
      |           ^~
%Error: t/t_stream_integer_type.v:135:11: SEL is not an unpacked array, but is in an unpacked array context
  135 |          {<<16{logic_out}}    = v_packed_data_64;
      |           ^~
%Error: t/t_stream_integer_type.v:136:11: SEL is not an unpacked array, but is in an unpacked array context
  136 |          {<<32{reg_out}}      = v_packed_data_128;
      |           ^~
%Error: t/t_stream_integer_type.v:160:11: SEL is not an unpacked array, but is in an unpacked array context
  160 |          {<<byte{byte_out}}         = packed_data_32;
      |           ^~
%Error: t/t_stream_integer_type.v:161:11: SEL is not an unpacked array, but is in an unpacked array context
  161 |          {<<shortint{shortint_out}} = packed_data_64;
      |           ^~
%Error: t/t_stream_integer_type.v:162:11: SEL is not an unpacked array, but is in an unpacked array context
  162 |          {<<int{int_out}}           = packed_data_128;
      |           ^~
%Error: t/t_stream_integer_type.v:163:11: SEL is not an unpacked array, but is in an unpacked array context
  163 |          {<<integer{integer_out}}   = packed_data_128_i;
      |           ^~
%Error: Exiting due to
